tests/baselines/reference/enumsWithMultipleDeclarations3.errors.txt
enumsWithMultipleDeclarations3.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== enumsWithMultipleDeclarations3.ts (1 errors) ====
    module E {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    
    enum E {
      A
    }